--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>图书管理系统</title>
-    <link rel="stylesheet" href="./css/util.css">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="css/util.css">
+    <link rel="stylesheet" href="css/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -17,7 +17,7 @@
                 <div class="form-group">
                   <span class="glyphicon glyphicon-user"></span>
                   <label for="username">账户</label>
-                  <input type="text" class="form-control" id="username"  name="username"  placeholder="请输入您的用户名">
+                  <input type="text" class="form-control" id="username"  name="username" onblur="checkNumber(this.value)" placeholder="请输入您的用户名">
                 </div>
                 <div class="form-group">
                   <span class="glyphicon glyphicon-lock"></span>
@@ -32,6 +32,6 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> 
-    <script src="./js/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
