--- a/main.html
+++ b/main.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>图书管理系统</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/util.css">
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/user.css">
+    <link rel="stylesheet" href="css/util.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/user.css">
   </head>
   <style>
 </style>
@@ -70,13 +70,13 @@
                         <div class="modal-body">
                             <form name="a">
                                 <p><label for="account">账号：</label><input type="tel" name="uno" id="account" class="gen" placeholder="请输入11位数的手机号"></p>
-                                <p><label for="pwd">密码：</label><input type="password" name="password" id="pwd" class="gen" placeholder="密码必须包含数字、字母至少两种字符">
+                                <p><label for="password">密码：</label><input type="password" name="pwd" id="password" class="gen" placeholder="密码必须包含数字、字母至少两种字符">
                                     <span id="error1" class="error1">密码安全系数过低！</span>
                                 </p>
-                                <p><label  for="user">姓名：</label><input type="text" name="uname" id="user" class="gen"></p>
+                                <p><label  for="addUame">姓名：</label><input type="text" name="uname" id="addUame" class="gen"></p>
                                 <p class="sex">
                                     <span>性别</span>
-                                    <label for="male">男</label><input type="radio" name="sex" id="male"  value="男" onclick="gd(this)"/>
+                                    <label for="male">男</label><input type="radio" name="sex" id="male"  value="男"/>
                                     <label for="female">女</label><input type="radio" name="sex" id="female" value="女"/>
                                 </p>
                                 <p>
@@ -95,8 +95,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
-    <script src="./js/main.js"></script>
-    <script src="./js/user.js"></script>
-    <script src="./js/right.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/user.js"></script>
+    <script src="js/right.js"></script>
 </body>
 </html>
