--- a/main.html
+++ b/main.html
@@ -75,9 +75,10 @@
                                 </p>
                                 <p><label  for="addUame">姓名：</label><input type="text" name="uname" id="addUame" class="gen"></p>
                                 <p class="sex">
-                                    <span>性别</span>
-                                    <label for="male">男</label><input type="radio" name="sex" id="male"  value="男"/>
-                                    <label for="female">女</label><input type="radio" name="sex" id="female" value="女"/>
+                                    <lable for="gender">性别：
+                                        <input type="radio" name="gender" id="male"  value="男" onclick="gd(this)"/>男
+                                        <input type="radio" name="gender" id="female" value="女" onclick="gd(this)"/>女
+                                    </lable>
                                 </p>
                                 <p>
                                     <button type="button" class="btn btn-default" id="add-confirm">确定</button>
