--- a/main.html
+++ b/main.html
@@ -29,8 +29,8 @@
         <div class="main">
             <nav>
                 <ul class="nav">
-                    <li class="user-manager"><span class="u-icon"></span>用户管理</li>
-                    <li class="book-manager"><span class="b-icon"></span>图书管理</li>
+                    <li class="user-manager"><span class="u-icon"><a></span>用户管理</a></li>
+                    <li class="book-manager"><span class="b-icon"><a></span>图书管理</a></li>
                 </ul>
             </nav>
             <div class="box">
