--- a/main.html
+++ b/main.html
@@ -23,15 +23,15 @@
             <div class="header-right">
                 <span class="user-icon"></span>
                 <!-- 根据后端数据修改 -->
-                <span id="identity" >超级管理员</span>
+                <span id="identity" >未登录</span>
                 <button type="button" class="btn btn-exit" id="exit"><span></span></button>
             </div>
         </header>
         <div class="main">
             <nav>
                 <ul class="nav">
-                    <li class="user-manager" id="user-manager"><span class="u-icon"><a></span>用户管理</a></li>
-                    <li class="book-manager" id="book-manager"><span class="b-icon"><a></span>图书管理</a></li>
+                    <li class="user-manager" id="user-manager"><span class="u-icon"></span><a>用户管理</a></li>
+                    <li class="book-manager" id="book-manager"><span class="b-icon"></span><a>图书管理</a></li>
                 </ul>
             </nav>
             <div class="box">
@@ -40,9 +40,9 @@
                         <!-- 用户管理-->
                         <div class="detail-header">
                             <div class="input-group">
-                                <input type="text" class="form-control" placeholder="输入姓名查询"  id="searchName">
+                                <input type="text" class="form-control" placeholder="输入姓名查询"  id="searchUserName">
                                 <span class="input-group-btn">
-                                    <button class="btn btn-default" type="button" id="search">搜索</button>
+                                    <button class="btn btn-default" type="button" id="search-userName">搜索</button>
                                 </span>
                             </div>
                             <button type="button" class="btn btn-primary" id="add-user">添加用户</button>
@@ -69,12 +69,12 @@
                           <h4 class="modal-title">添加用户</h4>
                         </div>
                         <div class="modal-body">
-                            <form name="a">
-                                <p><label for="account">账号：</label><input type="tel" name="uno" id="account" class="gen" placeholder="请输入11位数的手机号"></p>
-                                <p><label for="password">密码：</label><input type="password" name="pwd" id="password" class="gen" placeholder="密码必须包含数字、字母至少两种字符">
-                                    <span id="error1" class="error1">密码安全系数过低！</span>
+                            <form name="a" id="userForm-a">
+                                <p><label for="account">账号：</label><input type="tel" name="uno" id="account" class="gen" placeholder="请输入要添加的账号" ></p>
+                                <p><label for="password">密码：</label><input type="password" name="pwd" id="password" class="gen" placeholder="请输入密码">
+                                    <!-- <span id="error1" class="error1">密码安全系数过低！</span> -->
                                 </p>
-                                <p><label  for="addUame">姓名：</label><input type="text" name="uname" id="addUame" class="gen"></p>
+                                <p><label  for="addUame">姓名：</label><input type="text" name="uname" id="addUame" class="gen" minlength="1" placeholder="最小长度为1"></p>
                                 <p class="sex">
                                     <lable for="gender">性别：
                                         <input type="radio" name="gender" id="male"  value="男" onclick="gd(this)"/>男
@@ -99,7 +99,7 @@
                                 <input type="text" class="form-control" placeholder="输入出版社查询"  id="search-bookPub">
                                 <button class="btn btn-default" type="button" id="book-search">搜索</button>
                             </div>
-                            <button type="button" class="btn btn-primary" id="add-book">图书录入</button>
+                            <button type="button" class="btn btn-primary" id="add-book">图书添加</button>
                         </div>
                           <!-- 图书列表 -->
                         <div class="book-list">
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                     <!-- 分页 -->
-                    <div class="page" id="page">
+                    <div class="page" id="page2">
                         <button class="page-up" id="prev2">上一页</button>
                         <input type="text" value="1" id="pageNum2">
                         <button class="page-jump" id="jump2">跳转</button>
@@ -120,18 +120,19 @@
                     <div class="book-content" id="bookadd-modal">
                         <div class="book-header">
                           <button type="button" class="close2" data-dismiss="modal" aria-label="Close" ><span aria-hidden="true">&times;</span></button>
-                          <h4 class="book-title">图书录入</h4>
+                          <h4 class="book-title">图书添加</h4>
                         </div>
                         <div class="book-body">
-                            <form name="a">
-                                <p><label for="bookName">书名：</label><input type="text" name="uno" id="bookName-a" class="gan" placeholder="请输入书名"></p>
-                                <p><label  for="bookPub">出版社：</label><input type="text" name="uname" id="bookPub-a" class="gan"></p>
+                            <form name="a" id="bookForm-a">
+                                <p><label for="bookName-a">书名：</label><input type="text" name="uno" id="bookName-a" class="gan" placeholder="请输入书名"></p>
+                                <p><label  for="bookPub-a">出版社：</label><input type="text" name="uname" id="bookPub-a" class="gan" placeholder="请输入出版社"></p>
                                 <p class="gen">
-                                    <label  for="count">数量：</label><input type="number" name="uname" id="count-a" class="gan">
+                                    <label  for="count-a">数量：</label><input type="number" name="uname" id="count-a" class="gan" value="0">
                                 </p>
                                 <p class="type">
-                                    <label for="bookType">类型:&nbsp;&nbsp;</label>
-                                    <select name="" id="bookType" class="gbn">
+                                    <label for="bookType-a">类型:&nbsp;&nbsp;</label>
+                                    <select name="bookType" id="bookType-a" class="gbn">
+                                        <option value="">请选择类别</option>
                                         <option value="哲学类">哲学类</option>
                                         <option value="军事类">军事类</option>
                                         <option value="经济类">经济类</option>
@@ -159,8 +160,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script> -->
     <script src="js/main.js"></script>
-    <!-- <script src="js/user.js"></script> -->
-    <!-- <script src="js/right.js"></script> -->
+    <script src="js/user.js"></script>
     <script src="js/book.js"></script>
 </body>
 </html>
